docs/book/samples/ch08/numbers.out
error[naming]: `is_number_char` answers only true or false: name it `is_number_char?`
  --> numbers.kso:10:4
  10 | fn is_number_char 43
          ^
